# polkadot-spec

./: .gitignore
.github/workflows/: integration.yml
test/: hostapi_runtime.compact.wasm
test/runtimes/hostapi/: Cargo.toml  Makefile  hostapi_runtime.compact.wasm
test/runtimes/hostapi/src/: lib.rs
