[package]
name = "hostapi-runtime"
version = "2.0.0-rc6"
edition = "2018"
build = "build.rs"

[dependencies]
sp-core            = { version = "3.0.0", default-features = false, optional = true }
parity-scale-codec = { version = "2.2.0",       default-features = false, optional = true }

[build-dependencies]
substrate-wasm-builder = "1.0.11"

[features]
runtime-wasm = [ "sp-core", "parity-scale-codec" ]
